# IngeniumUAHub-GoogleAPI

./: README.md  pyproject.toml  setup.py
.github/workflows/: linting.yml  tag-version.yml
IngeniumUAHub-GoogleAPI/: GmailAPI.py  __init__.py
googleapi/: CalendarAPI.py  DirectoryAPI.py  GmailAPI.py  WorkspaceAPI.py
googleapi/APIs/: CalendarAPI.py  DirectoryAPI.py  DriveAPI.py  GeocodingAPI.py  GmailAPI.py  PlacesAPI.py  WalletAPI.py
googleapi/Helpers/: HelperFunctions.py
googleapi/TypedDicts/: Calendar.py  Directory.py  Drive.py  Gmail.py  ServiceAccountFile.py  Wallet.py
