[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "googleapi"
version = "45.7"
description = "A package to integrate Google API functionalities for Calendar, Drive, Gmail, and Directory"
authors = [
    {name = "Yorben Joosen", email = "webmaster@ingeniumua.be"},
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiogoogle",
    "passlib",
    "aiofiles",
    "google-auth",
    "google-auth-oauthlib",
    "google-auth-httplib2",
    "google-api-python-client",
    "fastapi"
]

[project.urls]
Homepage = "https://github.com/IngeniumUA/IngeniumUAHub-GoogleAPI"

[tool.setuptools]
packages = {find = {}}

[tool.black]
line-length = 120

[tool.mypy]
ignore_missing_imports = true
namespace_packages = true
mypy_path = "./googleapi"

[tool.isort]
known_first_party = "googleapi"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.ruff]
# General settings
extend-exclude = ["googleapi/tests"]

lint.select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]

lint.ignore = [
    "E501",  # Line too long, handled by Black
    "B008",  # Function calls in argument defaults
    "C901",  # Too complex
    "E731",  # Using lambda instead of def
]

[tool.ruff.lint.per-file-ignores]
# Allow dict() usage in tests, if applicable
"googleapi/tests/*.py" = ["C408"]